--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,10 @@ h4 {
     box-sizing: border-box;
 }
 
+.item_display:hover {
+    cursor: pointer;
+}
+
 .picked {
     box-shadow: inset 0px 0px 1px 5px #32B72F;
 }
@@ -165,3 +169,7 @@ h4 {
 .hide {
     display: none;
 }
+
+/* .checkmark {
+    display: initial;
+} */
