--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ h4 {
 }
 
 .ok_button:hover {
-    cursor:pointer
+    cursor: pointer
 }
 
 .hide {
@@ -176,4 +176,81 @@ h4 {
 
 .green {
     background-color: #32B72F;
+}
+
+.transparency {
+    width: 100%;
+    height: 100%;
+    background-color: #eeeeee;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    opacity: 0.5;
+}
+
+.end_alert {
+    background-color: #50d074;
+    width: 377px;
+    height: 353px;
+    position: fixed;
+    left: 50%;
+    margin-left: -188.5px;
+    top: 50%;
+    margin-top: -151.5px;
+    border-radius: 9px;
+    box-shadow: 0 0 10px 1px #000000;
+    z-index: 3;
+    font-family: 'Roboto';
+}
+
+.alert_title {
+    display: flex;
+    justify-content: center;
+    margin-top: 21px;
+}
+
+.end_alert h1 {
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 22px;
+    color: #ffffff;
+}
+
+.alert_content {
+    color: #ffffff;
+    margin: 0 25px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 28px;
+    font-size: 22px;
+}
+
+.alert_entry {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 13px;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.go_button {
+    background-color: #ffffff;
+    color: #50d074;
+    width: 333px;
+    height: 52px;
+    border-radius: 100px;
+    font-size: 22px;
+    margin-top: 11px;
+}
+
+.cancel_button {
+    color: #ffffff;
+    background-color: #50d074;
+    width: 333px;
+    height: 52px;
+    border-radius: 100px;
+    font-size: 22px;
 }
