--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,10 @@ h4 {
     overflow-x: scroll;
 }
 
+.section-body::-webkit-scrollbar{
+    display: none;
+}
+
 .item_display {
     background-color: #ffffff;
     width: 172px;
